name:                structured
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/structured#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  extensions: OverloadedStrings
  hs-source-dirs:      src
  exposed-modules:     IndexCode
  build-depends:       base >= 4.7 && < 5
                      , system-fileio
                      , system-filepath
                      , async
                      , text
                      , extra
                      , parallel
                      , containers
  default-language:    Haskell2010

executable structured-exe
  extensions: OverloadedStrings
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , structured
                     , system-fileio
                     , filepath
                     , system-filepath
                     , async
                     , text
                     , extra
                     , parallel
                     , containers
  default-language:    Haskell2010

test-suite structured-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , structured
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/structured
